# silver-train

./: LICENSE  create_table.sh  pyproject.toml  run-server.sh
app/: crud.py  database.py  model.py  schema.py  server.py
